--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,38 +8,38 @@
     "dev": "vite dev --port=3001"
   },
   "dependencies": {
-    "radix-ui": "^1.4.2",
-    "@tanstack/react-form": "^1.0.5",
-    "@tailwindcss/vite": "^4.1.8",
-    "@tanstack/react-query": "^5.80.5",
-    "@tanstack/react-router": "^1.121.0-alpha.27",
-    "@tanstack/react-router-with-query": "^1.121.0",
-    "@tanstack/react-start": "^1.121.0-alpha.27",
-    "@tanstack/router-plugin": "^1.121.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-form": "^1.18.0",
+    "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-router": "^1.130.12",
+    "@tanstack/react-router-with-query": "^1.130.12",
+    "@tanstack/react-start": "^1.130.15",
+    "@tanstack/router-plugin": "^1.130.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "sonner": "^2.0.3",
-    "tailwindcss": "^4.1.3",
+    "radix-ui": "^1.4.2",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.2.5",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "zod": "^4.0.2"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@tanstack/react-router-devtools": "^1.121.0-alpha.27",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.5.2",
-    "jsdom": "^26.0.0",
-    "typescript": "^5.7.2",
-    "vite": "^7.0.2",
-    "web-vitals": "^5.0.3",
-    "@tanstack/react-query-devtools": "^5.80.5"
+    "@tanstack/react-query-devtools": "^5.84.1",
+    "@tanstack/react-router-devtools": "^1.130.13",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "jsdom": "^26.1.0",
+    "typescript": "^5.9.2",
+    "vite": "^7.0.6",
+    "web-vitals": "^5.1.0"
   }
 }
