--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "dependencies": {},
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
-    "ultracite": "5.1.1",
     "husky": "^9.1.7",
-    "lint-staged": "^16.1.2"
+    "lint-staged": "^16.1.4",
+    "ultracite": "5.1.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx}": [
-      "npx ultracite format"
+      "bunx ultracite format"
     ]
   },
   "packageManager": "bun@1.2.19"
