--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,6 @@
     "@tanstack/react-form": "^1.18.0",
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-router": "^1.130.12",
-    "@tanstack/react-router-with-query": "^1.130.12",
     "@tanstack/react-start": "^1.130.15",
     "@tanstack/router-plugin": "^1.130.15",
     "class-variance-authority": "^0.7.1",
@@ -20,8 +19,8 @@
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
@@ -30,7 +29,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^5.84.1",
+    "@plugin-web-update-notification/vite": "^2.0.0",
     "@tanstack/react-router-devtools": "^1.130.13",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
